tests/tests/snapshots/bindings__asymmetric_type_renders_unified.snap
---
source: tests/tests/bindings.rs
assertion_line: 180
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { invoke } from "@tauri-apps/api/core";

export const patches = {
  apply(patch: Patch): Promise<Patch> {
    return invoke("apply", { patch });
  },
};

/**
 *  A serde-asymmetric wire type for the phase-boundary test:
 *  `skip_serializing_if` makes the serialize shape (the field may be
 *  omitted) differ from the deserialize shape. As of specta
 *  2.0.0-rc.26 the unified `Format` renders the sound superset
 *  (`note?: string | null`); under rc.25 this errored loudly at
 *  export instead.
 */
export type Patch = {
	note?: string | null,
};
