tests/tests/snapshots/bindings__channels_client.snap
---
source: tests/tests/bindings.rs
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { invoke, Channel } from "@tauri-apps/api/core";

export const downloads = {
  track(total: number, progress: Channel<Progress>): Promise<null> {
    return invoke("track", { total, progress });
  },

  trackAsync(total: number, progress: Channel<Progress>): Promise<null> {
    return invoke("track_async", { total, progress });
  },
};

/**
 *  A streamed value for the channel dispatch tests: the payload a
 *  `Channel<Progress>` carries back to the caller.
 */
export type Progress = {
	done: number,
	total: number,
};
