tests/tests/snapshots/bindings__commands_and_events_coexist.snap
---
source: tests/tests/bindings.rs
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { invoke } from "@tauri-apps/api/core";
import { listen } from "@tauri-apps/api/event";

export const faders = {
  set(channel: number, value: number): Promise<null> {
    return invoke("set", { channel, value });
  },

  level(channel: number): Promise<number> {
    return invoke("level", { channel });
  },

  label(channel: number, name: string): Promise<string> {
    return invoke("label", { channel, name });
  },
};

export type FaderEvent = { type: "changed"; channel: number; value: number };

export const events = {
  fader: {
    listen(callback: (event: FaderEvent) => void): Promise<() => void> {
      return listen<{ channel: number; value: number }>("fader:changed", (event) => callback({ type: "changed", ...event.payload }));
    },
  },
};
