tests/tests/snapshots/bindings__events_client.snap
---
source: tests/tests/bindings.rs
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { listen } from "@tauri-apps/api/event";

export type FaderEvent = { type: "changed"; channel: number; value: number };

export const events = {
  fader: {
    listen(callback: (event: FaderEvent) => void): Promise<() => void> {
      return listen<{ channel: number; value: number }>("fader:changed", (event) => callback({ type: "changed", ...event.payload }));
    },
  },
};
