tests/tests/snapshots/bindings__files_layout_splits_by_module.snap
---
source: tests/tests/bindings.rs
expression: dir_to_string(dir.path())
---
// === index.ts ===
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import type * as ttipc_tests$scene from "./ttipc_tests/scene";

import { invoke } from "@tauri-apps/api/core";

export const scenes = {
  save(scene: ttipc_tests$scene.Scene): Promise<null> {
    return invoke("save", { scene });
  },

  load(name: string): Promise<ttipc_tests$scene.Scene> {
    return invoke("load", { name });
  },
};

// === ttipc_tests/scene.ts ===
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.
/**  A saved lighting scene: a name and one level per channel. */
export type Scene = {
	name: string,
	levels: number[],
};
