tests/tests/snapshots/bindings__flat_file_client.snap
---
source: tests/tests/bindings.rs
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { invoke } from "@tauri-apps/api/core";

export const faders = {
  set(channel: number, value: number): Promise<null> {
    return invoke("set", { channel, value });
  },

  level(channel: number): Promise<number> {
    return invoke("level", { channel });
  },

  label(channel: number, name: string): Promise<string> {
    return invoke("label", { channel, name });
  },
};
