tests/tests/snapshots/bindings__map_datatypes_remaps_everything_at_export.snap
---
source: tests/tests/bindings.rs
assertion_line: 217
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { invoke } from "@tauri-apps/api/core";

export const ledger = {
  balance(account: number): Promise<number> {
    return invoke("balance", { account });
  },
};
