tests/tests/snapshots/bindings__method_case_defaults_to_camel.snap
---
source: tests/tests/bindings.rs
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { invoke } from "@tauri-apps/api/core";

export const mixer = {
  setChannel(channelNumber: number, newValue: number): Promise<null> {
    return invoke("set_channel", { channel_number: channelNumber, new_value: newValue });
  },
};
