tests/tests/snapshots/bindings__method_case_snake_is_the_taurpc_dropin.snap
---
source: tests/tests/bindings.rs
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { invoke } from "@tauri-apps/api/core";

export const mixer = {
  set_channel(channelNumber: number, newValue: number): Promise<null> {
    return invoke("set_channel", { channel_number: channelNumber, new_value: newValue });
  },
};
