tests/tests/snapshots/bindings__multi_variant_events_client.snap
---
source: tests/tests/bindings.rs
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { listen } from "@tauri-apps/api/event";

export type SignalEvent = { type: "ready" } | { type: "progress"; done: number } | { type: "code"; data: number } | { type: "batch"; data: number[] };

export const events = {
  signal: {
    async listen(callback: (event: SignalEvent) => void): Promise<() => void> {
      const unlisten = await Promise.all([
        listen<null>("signal:ready", () => callback({ type: "ready" })),
        listen<{ done: number }>("signal:progress", (event) => callback({ type: "progress", ...event.payload })),
        listen<number>("signal:code", (event) => callback({ type: "code", data: event.payload })),
        listen<number[]>("signal:batch", (event) => callback({ type: "batch", data: event.payload })),
      ]);
      return () => unlisten.forEach((un) => un());
    },
  },
};
