tests/tests/snapshots/bindings__named_types_client.snap
---
source: tests/tests/bindings.rs
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { invoke } from "@tauri-apps/api/core";

export const scenes = {
  save(scene: Scene): Promise<null> {
    return invoke("save", { scene });
  },

  load(name: string): Promise<Scene> {
    return invoke("load", { name });
  },
};

/**  A saved lighting scene: a name and one level per channel. */
export type Scene = {
	name: string,
	levels: number[],
};
