tests/tests/snapshots/bindings__string_error_is_the_taurpc_dropin.snap
---
source: tests/tests/bindings.rs
expression: client
---
// This file has been generated by tauri_typed_ipc. DO NOT EDIT.

import { invoke } from "@tauri-apps/api/core";

export const notes = {
  /** @throws {string} */
  save(note: string): Promise<number> {
    return invoke("save", { note });
  },

  count(): Promise<number> {
    return invoke("count");
  },
};
